fix dropdown overflow (#1135)

--- a/src/common/filters/_filters.scss
+++ b/src/common/filters/_filters.scss
@@ -309,5 +309,8 @@
                 font-size: 0.5em;
             }
         }
+        div.collapse-target {
+            overflow: visible !important;
+        }
     }
 }
